--- a/src/syntax/07-fuctions.scss
+++ b/src/syntax/07-fuctions.scss
@@ -1,5 +1,6 @@
 @use "sass:meta";
 @use "sass:math";
+
 $nothing: null;
 $num: 101;
 $unit: 180px;
@@ -23,11 +24,15 @@ $theme: (
     forground: #e7e6e7,
   ),
 );
+
 @function getUnit($value) {
   @return math.unit($value);
 }
+
 $value-1: 10px;
 $value-2: 5px;
+$value-2: 5;
+
 .container {
   animation-delay: 9s + 21s;
   // width: $value-1 + $value-2;
@@ -35,9 +40,27 @@ $value-2: 5px;
   // width: $value-1 * $value-2;
   width: math.div($value-1, $value-2);
 }
+
 @debug $value-1 * $value-2;
 @debug "Helvetica" + " " + "Neue"; // 'Helvetica Neue'
+
 $word1: "Helvetica";
 $word2: "Neue";
 $word3: sans;
 $word4: serif;
+@debug (5px 7px 10px) != (5px, 7px, 10px); // true
+// 단위를 제거하는 함수
+// 나눗셈 연산  ( 10px / 5px  = > 2 )
+@function removeUnit($value) {
+  @return math.div($value, ($value * 0 + 1));
+}
+@function rem($value, $base: 16) {
+  @return math.div(removeUnit($value), $base) * 1rem;
+}
+@function em($value, $base) {
+  @return math.div(removeUnit($value), removeUnit($base)) * 1em;
+}
+.box {
+  font-family: "#{$word1 $word2}", #{$word3 - $word4};
+  font-size: em(24px, 14px);
+}
