--- a/src/scss/components/_combobox.scss
+++ b/src/scss/components/_combobox.scss
@@ -5,53 +5,72 @@
 .combobox {
   $light-text-color: $secondary-color;
   $dark-text-color: $accent-color;
+  $font-mobile: $text-sm;
+  $font-desktop: $text-lg;
 
   color: light-dark($light-text-color, $dark-text-color);
 
   border: 1px solid currentColor;
+
   // display: inline-flex;
   // flex-flow: row nowrap;
   // align-items: center;
-  // padding: 6px 16px;
-  border-radius: 16px;
-  display: inline-flex;
-  position: relative;
-  font-size: 14px;
+  @include flex-container(justify-center items-center row wrap, inline-flex);
 
-  @media (min-width: 1024px) {
-    font-size: 18px;
+  // border-radius: 16px;
+  @include rounded();
+
+  // position: relative;
+  @include relative-container(svg);
+
+  // font-size: 14px;
+  // @media (min-width: 1024px) {
+  //   font-size: 18px;
+  // }
+  font-size: $font-mobile;
+  @include mq(lg) {
+    font-size: $font-desktop;
   }
+  
 
   svg {
-    position: absolute;
-    top: 50%;
-    translate: 0 -50%;
+    // position: absolute;
+    // top: 50%;
+    // translate: 0 -50%;
+
     pointer-events: none;
 
+    font-size: $font-mobile;
+    @include mq(lg) {
+      font-size: $font-desktop;
+    }
+
     &:nth-of-type(1) {
-      left: 8px;
+      left: $spacing-sm;
     }
     &:nth-of-type(2) {
-      right: 8px;
+      right: $spacing-sm;
     }
   }
 
   label {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin: -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
+    @include a11y-hidden;
+    // position: absolute;
+    // width: 1px;
+    // height: 1px;
+    // padding: 0;
+    // margin: -1px;
+    // overflow: hidden;
+    // clip: rect(0, 0, 0, 0);
+    // white-space: nowrap;
+    // border-width: 0;
   }
 
   select {
+    color: inherit;
     appearance: none;
     border: 0;
-    padding: 0 24px;
+    padding: $spacing-base $spacing-5xl;
     background-color: transparent;
   }
 }
